kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oai-functions
  labels:
    name: oai-functions
    component: oai-phy-layer
